# livdet-rest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  livdet-client.cpp
